crates/uitest/fixtures/ty_check/method_selection/ambiguous_trait_inst.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/method_selection/ambiguous_trait_inst.fe
---
error[8-0026]: multiple trait candidates found
   ┌─ ambiguous_trait_inst.fe:23:15
   │
23 │     let y = f.foo()
   │               ^^^
   │               │
   │               `foo` is ambiguous
   │               candidate: `Trait<u32>::foo`
   │               candidate: `Trait<i32>::foo`

error[8-0031]: type annotation is needed
   ┌─ ambiguous_trait_inst.fe:23:9
   │
23 │     let y = f.foo()
   │         ^
   │         │
   │         type annotation is needed
   │         consider giving `: Type` here
